--- a/lessons__16/css/style.css
+++ b/lessons__16/css/style.css
@@ -2,6 +2,8 @@
 
 @import url(https://fonts.googleapis.com/css?family=Oswald:500,600&display=swap);
 
+@import url(https://fonts.googleapis.com/css?family=Roboto:regular&display=swap);
+
 @charset "UTF-8";
 
 * {
